# salary-prediction-using-sympy

./: .gitignore  README.md  main.py  pyproject.toml
data/: Salary_Data.csv  Salary_Data_test.csv
notebooks/: simple-linear-regression-sympy-approach-2.ipynb  simple-linear-regression-sympy-with-accuracy-scores.ipynb  simple-linear-regression-sympy.ipynb
notebooks/.ipynb_checkpoints/: simple-linear-regression-sympy-with-accuracy-scores-checkpoint.ipynb
