[project]
name = "simple-linear-regression-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "nbconvert[qtpdf,qtpng,webpdf]>=7.16.6",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "sympy>=1.14.0",
]
